--- a/Day-3/MVVM/SalaryCalculator.html
+++ b/Day-3/MVVM/SalaryCalculator.html
@@ -83,9 +83,7 @@
 		viewModel.addModelChange('da',function(){
 			$("#txtDa").val(this.da());
 		});
-		viewModel.addModelChange('tax',function(){
-			$("#txtTax").val(this.tax());
-		});
+		
 		
 
 		$("#txtBasic").change(function(){
@@ -97,9 +95,7 @@
 		$("#txtDa").change(function(){
 			viewModel.da(parseInt(this.value));
 		});
-		$("#txtTax").change(function(){
-			viewModel.tax(parseInt(this.value));
-		});
+		
 		$("#btnCalculate").click(function(){
 			viewModel.calculate();
 
@@ -112,7 +108,7 @@
 	<div><span>Basic :</span><input type="text" name="" id="txtBasic"></div>
 	<div><span>HRA :</span><input type="text" name="" id="txtHra"></div>
 	<div><span>DA :</span><input type="text" name="" id="txtDa"></div>
-	<div><span>Tax :</span><input type="text" name="" id="txtTax"></div>
+	<div><span>Tax :</span><input type="range" min="10" max="50" value="25" name="" id="rangeTax"><span id="spanTax">[tax]</span></div>
 	<div><input type="button" value="Calculate" id="btnCalculate"></div>
 	<div>
 		<div id="divResult"></div>
